--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,5 +1,5 @@
 .active{
-    border: 2px solid rgb(183, 99, 252);
-    border-radius: 20%;
-    padding: 5px;
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+    font-size: x-large;
 }
